# homework_10.2_pytest

./: .coverage  .env.sample  .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_operations_py.html  z_145eef247bfb46b6_output_data_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_regex_searching_py.html  z_145eef247bfb46b6_transactions_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html
src/: README.md  decorators.py  external_api.py  generators.py  main.py  masks.py  operations.py  output_data.py  processing.py  regex_searching.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_operations.py  test_output_data.py  test_processing.py  test_regex_searching.py  test_utils.py  test_widget.py
