[tool.poetry]
name = "homework-10-1"
version = "0.1.0"
description = ""
authors = ["Doniyor <donish1979@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
function = "^1.2.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
isort = "^5.13.2"
black = "^24.10.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"
pytest = "^8.3.3"

[mypy]
ignore_missing_imports = true
strict_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
